--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
        <!--  ====================== Goldma  Area Start =============================  -->
        <section class="goldma-area mt-33">
 <div class="container">
-   <div class="section-title  mb-14">
+   <div class="section-title  text-center mb-14">
       <h2 class="text-6xl font-medium text-white"> How to buy and stake <span class="text-yellow-400"> GOLDMA</span>  </h2>
      
    </div>
@@ -336,17 +336,17 @@
    <img src="assets/images/metamask.png" alt="images">
 </div>
 <div class="metamask-text border-l-2 border-white border-opacity-5 pl-16">
-   <p class="text-xl font-medium text-gray-50 mb-5"><span class="text-yellow-400"> Step 1:</span>
+   <p class="text-xl font-normal text-gray-50 mb-5"><span class="text-yellow-400"> Step 1:</span>
       Install MetaMask</p>
-      <p class="text-xl font-medium text-gray-50 mb-5"><span class="text-yellow-400"> Step 2:</span>
+      <p class="text-xl font-normal text-gray-50 mb-5"><span class="text-yellow-400"> Step 2:</span>
          Set up your MetaMask Wallet</p>
-         <p class="text-xl font-medium text-gray-50 mb-5"><span class="text-yellow-400"> Step 3:</span>
+         <p class="text-xl font-normal text-gray-50 mb-5"><span class="text-yellow-400"> Step 3:</span>
             Buy ETH (for gas) & MATIC (to become GOLDMA)</p>
-            <p class="text-xl font-medium text-gray-50 mb-5"><span class="text-yellow-400"> Step 4:</span>
+            <p class="text-xl font-normal text-gray-50 mb-5"><span class="text-yellow-400"> Step 4:</span>
                Bridge MATIC Funds from Ethereum Network to Polygon Network</p>
-               <p class="text-xl font-medium text-gray-50 mb-5"><span class="text-yellow-400"> Step 5:</span>
+               <p class="text-xl font-normal text-gray-50 mb-5"><span class="text-yellow-400"> Step 5:</span>
                   Swap from MATIC to GOLDMA(GMA)</p>
-                  <p class="text-xl font-medium text-gray-50 "><span class="text-yellow-400"> Step 6:</span>
+                  <p class="text-xl font-normal text-gray-50 "><span class="text-yellow-400"> Step 6:</span>
                      Stake Goldma (GMA) to earn rewards 💸</p>
 </div>
             </div>
