--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!--  ====================== Hero Area Start =============================  -->
     <section class="hero-area py-36 bg-cover bg-bottom " style="background-image: url(assets/images/hero-shape.svg);">
        <div class="container">
-          <div class="grid grid-cols-12 my-20 gap-20">
+          <div class="grid grid-cols-12 items-center my-20 gap-20">
              <div class="col-span-4">
                 <div class="images-left">
                    <img class="w-113" src="assets/images/development.png" alt="images">
