--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
      <!--  ====================== Hero Button Area End =============================  -->
      <!--  ====================== Stats  Area Start =============================  -->
-     <section class="stats-area w-10/12 bg-white bg-opacity-5 mt-33 m-auto p-10 rounded-md">
+     <section class="stats-area  bg-white bg-opacity-5 mt-33 m-auto p-10 ">
 <div class="container">
 <div class="grid grid-cols-3 gap-20">
 <div class="stats-box text-center">
