--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
              <div class="col-span-8">
                 <div class="heor-right-area">
                    <h2 class="font-medium text-6xl text-white hero-title">The Blueprint for Peace and Prosperity  for People and the Planet</h2>
-                   <p class="hero-description text-xl  font-normal text-gray-50 mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
+                   <p class="hero-description text-2xl  font-normal text-gray-50 mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
                 </div>
              </div>
 
