--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <!--  ====================== Header Area Start =============================  -->
    <header class="header-area absolute header-bottombar header-area left-0 right-0">
       <div class="container ">
-         <div class="header-area-inner  py-4  relative  z-20">
+         <div class="header-area-inner py-2 lg:py-4  relative  z-20">
             <nav class="header-nav flex items-center justify-between relative">
                <div class="header-logo h-20">
                   <a href="index.html" class="flex items-center flex-shrink-0 ">
@@ -32,8 +32,8 @@
                </div>
                <div class="flex-grow lg:flex lg:items-center lg:w-auto">
                   <ul
-                     class="toggle-menu-class dropdown-menu justify-end bg-black lg:bg-transparent  shadow lg:shadow-none absolute lg:relative inset-x-0 hidden lg:flex lg:flex-grow items-center mt-6 lg:mt-0 mobile-hover">
-                     <li class="relative dropdown lg:mr-4">
+                     class="toggle-menu-class dropdown-menu justify-end bg-primary-100 lg:bg-transparent  shadow lg:shadow-none absolute lg:relative inset-x-0 hidden lg:flex lg:flex-grow items-center mt-12 lg:mt-0 mobile-hover">
+                     <li class="relative dropdown  lg:mr-4">
                         <a class=" arrow lg:p-5 px-5 pt-5 flex items-center  text-white  font-medium text-xl hover:text-yellow-400"
                            href="#">
                            Stake
@@ -42,20 +42,20 @@
                         </a>
                         
                      </li>
-                     <li class="relative dropdown lg:mr-4">
+                     <li class="relative dropdown mt-8 lg:mt-0 lg:mr-4">
                         <a class=" w lg:p-5 px-5 pt-2 flex items-center  text-white  font-medium text-xl hover:text-yellow-400"
                            href="#"> Bond </a>
                      </li>
-                     <li class="relative  lg:mr-4">
+                     <li class="relative mt-8 lg:mt-0 lg:mr-4">
                         <a class=" lg:p-5 px-5 pt-2 flex items-center  text-white  font-medium text-xl hover:text-yellow-400"
                            href="#">FAQ </a>
                      </li>
-                     <li class="relative lg:mr-4">
+                     <li class="relative lg:mr-4 mt-8 lg:mt-0">
                         <a class="arrow flex items-center lg:p-5 px-5 pt-2 text-white  font-medium text-xl hover:text-yellow-400"
                            href="#">Get Involved</a>
                      </li>
                     
-                     <li class="   relative  px-5 pb-5 lg:pb-0 lg:px-0">
+                     <li class="   relative  px-5 pb-5 lg:pb-0 lg:px-0 inline-block mt-8 lg:mt-0">
                         <a href="#"
                            class="  bg-yellow-400 button-style-1  px-7   py-6  leading-15   text-xl font-medium text-white hover:text-white relative block   rounded-sm  overflow-hidden">
                            Start Earning
@@ -63,7 +63,7 @@
                      </li>
                   </ul>
                </div>
-               <button class="bg-transparent mobile-toggle block ">
+               <button class="bg-transparent mobile-toggle block lg:hidden">
                   <span class="bg-white"></span>
                   <span class="bg-white"></span>
                   <span class="bg-white"></span>
@@ -76,16 +76,16 @@
     <!--  ====================== Hero Area Start =============================  -->
     <section class="hero-area py-36 bg-cover bg-bottom " style="background-image: url(assets/images/hero-shape.svg);">
        <div class="container">
-          <div class="grid grid-cols-12 items-center my-20 gap-20">
-             <div class="col-span-4">
+          <div class="md:grid md:grid-cols-12 items-center my-20 gap-20">
+             <div class="md:col-span-4">
                 <div class="images-left">
                    <img class="w-113" src="assets/images/development.png" alt="images">
                 </div>
              </div>
-             <div class="col-span-8">
-                <div class="heor-right-area">
-                   <h2 class="font-medium text-6xl text-white hero-title">The Blueprint for Peace and Prosperity  for People and the Planet</h2>
-                   <p class="hero-description text-2xl  font-normal text-gray-50 mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
+             <div class="md:col-span-8">
+                <div class="heor-right-area mt-10 md:mt-0">
+                   <h2 class="font-medium text-3xl md:text-4xl leading-47.4 md:leading-66.36 lg:text-6xl text-white hero-title">The Blueprint for Peace and Prosperity  for People and the Planet</h2>
+                   <p class="hero-description text-xl  font-normal text-gray-50 mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
                 </div>
              </div>
 
@@ -98,17 +98,17 @@
 <section class="hero-button-area text-center -mt-33">
    <div class="container">
       <div class="hero-button  mb-2 ">
-         <a href="#" class=" w-193.5 bg-teal-100 button-style-1     py-7  leading-18   text-xl font-medium text-white hover:text-white relative inline-block   rounded-md  overflow-hidden">
+         <a href="#" class="w-full md:w-193.5 bg-teal-100 button-style-1     py-7  leading-18   text-xl font-medium text-white hover:text-white relative inline-block   rounded-md  overflow-hidden">
             Seeking Community Leaders
          </a>
       </div>
       <div class="hero-button  mb-2 ">
-         <a href="#" class=" w-193.5 bg-yellow-400 button-style-1 inline-block    py-7  leading-18   text-xl font-medium text-white hover:text-white relative   rounded-md  overflow-hidden">
+         <a href="#" class="w-full md:w-193.5 bg-yellow-400 button-style-1 inline-block    py-7  leading-18   text-xl font-medium text-white hover:text-white relative   rounded-md  overflow-hidden">
             Join our Discord
          </a>
       </div>
       <div class="hero-button  mb-2 ">
-         <a href="#" class=" w-193.5 bg-emerald-700 button-style-1 inline-block    py-7  leading-18   text-xl font-medium text-white hover:text-white relative   rounded-md  overflow-hidden">
+         <a href="#" class=" w-full md:w-193.5 bg-emerald-700 button-style-1 inline-block    py-7  md:leading-18   text-xl font-medium text-white hover:text-white relative   rounded-md  overflow-hidden">
             Sustainable Development Starts with YOU!
          </a>
       </div>
