--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     <!--  ====================== Hero Area Start =============================  -->
     <section class="hero-area py-36 bg-cover bg-bottom " style="background-image: url(assets/images/hero-shape.svg);">
        <div class="container">
-          <div class="md:grid md:grid-cols-12 items-center my-20 gap-20">
+          <div class="md:grid md:grid-cols-12 items-center lg:my-20 gap-20">
              <div class="md:col-span-4">
                 <div class="images-left">
                    <img class="w-113" src="assets/images/development.png" alt="images">
                 </div>
              </div>
              <div class="md:col-span-8">
-                <div class="heor-right-area mt-10 md:mt-0">
+                <div class="heor-right-area mt-10 md:mt-0 text-center lg:text-left">
                    <h2 class="font-medium text-3xl md:text-4xl leading-47.4 md:leading-66.36 lg:text-6xl text-white hero-title">The Blueprint for Peace and Prosperity  for People and the Planet</h2>
                    <p class="hero-description text-xl  font-normal text-gray-50 mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
                 </div>
@@ -120,7 +120,7 @@
      <!--  ====================== Stats  Area Start =============================  -->
      <section class="stats-area  bg-white bg-opacity-5 mt-33 m-auto p-10 ">
 <div class="container">
-<div class="grid grid-cols-3 gap-20">
+<div class="grid lg:grid-cols-3 gap-10 lg:gap-20">
 <div class="stats-box text-center">
    <p class="font-normal text-xl text-gray-50">Total GMA Staked</p>
 <h2 class="font-bold text-6xl text-white">35.25%</h2>
@@ -144,7 +144,7 @@
               <h2 class="text-6xl font-medium text-white"><span class="text-yellow-400">Grow your wealth</span> with GOLDMA</h2>
               <p class="text-xl font-normal text-gray-50 mt-4">A next generation currency underpinned by 3 core features</p>
            </div>
-           <div class="grid grid-cols-3 gap-20">
+           <div class="grid lg:grid-cols-3 gap-10 lg:gap-20">
                <div class="grow-box text-center">
                   <div class="grow-images mb-4">
                      <img class="h-25 inline-block" src="assets/images/gold-1.png" alt="images">
