--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
    </header>
    <!--  ====================== Header Area End =============================  -->
     <!--  ====================== Hero Area Start =============================  -->
-    <section class="hero-area py-36 bg-cover bg-bottom " style="background-image: url(assets/images/hero-shape.svg);">
+    <section class="hero-area  pt-36 pb-12 lg:py-36 bg-cover bg-bottom " style="background-image: url(assets/images/hero-shape.svg);">
        <div class="container">
           <div class="md:grid md:grid-cols-12 items-center lg:my-20 gap-20">
              <div class="md:col-span-4">
-                <div class="images-left">
-                   <img class="w-113" src="assets/images/development.png" alt="images">
+                <div class="images-left text-center lg:text-left">
+                   <img class="w-113 inline-block" src="assets/images/development.png" alt="images">
                 </div>
              </div>
              <div class="md:col-span-8">
                 <div class="heor-right-area mt-10 md:mt-0 text-center lg:text-left">
-                   <h2 class="font-medium text-3xl md:text-4xl leading-47.4 md:leading-66.36 lg:text-6xl text-white hero-title">The Blueprint for Peace and Prosperity  for People and the Planet</h2>
-                   <p class="hero-description text-xl  font-normal text-gray-50 mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
+                   <h2 class="font-medium text-2xl md:text-4xl leading-tight  lg:text-5xl text-white hero-title">The Blueprint for Peace and Prosperity  for People and the Planet</h2>
+                   <p class="hero-description text-xl  font-normal text-gray-50 mt-6 lg:mt-12">An Algorithmic Reserve Currency backed by Digital and Real World Assets</p>
                 </div>
              </div>
 
@@ -95,7 +95,7 @@
     </section>
      <!--  ====================== Hero Area End =============================  -->
      <!--  ====================== Hero Button Area Start =============================  -->
-<section class="hero-button-area text-center -mt-33">
+<section class="hero-button-area text-center lg:-mt-33">
    <div class="container">
       <div class="hero-button  mb-2 ">
          <a href="#" class="w-full md:w-193.5 bg-teal-100 button-style-1     py-7  leading-18   text-xl font-medium text-white hover:text-white relative inline-block   rounded-md  overflow-hidden">
@@ -118,7 +118,7 @@
 
      <!--  ====================== Hero Button Area End =============================  -->
      <!--  ====================== Stats  Area Start =============================  -->
-     <section class="stats-area  bg-white bg-opacity-5 mt-33 m-auto p-10 ">
+     <section class="stats-area  bg-white bg-opacity-5 mt-12 lg:mt-33 m-auto p-10 ">
 <div class="container">
 <div class="grid lg:grid-cols-3 gap-10 lg:gap-20">
 <div class="stats-box text-center">
@@ -205,12 +205,12 @@
                <div class="earning-images mt-4">
                   <img src="assets/images/goldma-p-1.png" alt="images">
                </div>
-               <div class="earning-shape mt-4 ml-16.5">
+               <div class="earning-shape mt-4 ml-16.5 hidden lg:block">
                   <img src="assets/images/arrow-shape.svg" alt="images">
                </div>
 
             </div>
-            <div class="earning-box relative -mt-29 left-55">
+            <div class="earning-box relative lg:-mt-29 lg:left-55">
                <div class="flex">
                   <div class="flex-col mr-2">
                      <span class="w-8 h-8 bg-yellow-400 flex text-center justify-center items-center text-white rounded-full">2</span>
@@ -222,12 +222,12 @@
                <div class="earning-images mt-4">
                   <img src="assets/images/ass-1.png" alt="images">
                </div>
-               <div class="earning-shape mt-4 ml-16.5">
+               <div class="earning-shape mt-4 ml-16.5 hidden lg:block">
                   <img src="assets/images/arrow-shape.svg" alt="images">
                </div>
 
             </div>
-            <div class="earning-box relative -mt-29 left-75">
+            <div class="earning-box relative lg:-mt-29 lg:left-75">
                <div class="flex">
                   <div class="flex-col mr-2">
                      <span class="w-8 h-8 bg-yellow-400 flex text-center justify-center items-center text-white rounded-full">3</span>
