--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
      <!--  ====================== Hero Button Area End =============================  -->
      <!--  ====================== Stats  Area Start =============================  -->
-     <section class="stats-area  bg-white bg-opacity-5 mt-12 lg:mt-33 m-auto p-10 ">
+     <section class="stats-area  bg-white bg-opacity-5 mt-14 lg:mt-33 m-auto p-10 ">
 <div class="container">
 <div class="grid lg:grid-cols-3 lg:my-20  gap-10 lg:gap-20">
 <div class="stats-box text-center">
@@ -138,7 +138,7 @@
      </section>
      <!--  ====================== Stats  Area End =============================  -->
      <!--  ====================== Grow  Area Start =============================  -->
-     <section class="grow-area mt-33">
+     <section class="grow-area mt-14 lg:mt-33">
         <div class="container">
            <div class="section-title text-center mb-14">
               <h2 class="text-3xl md:text-4xl lg:text-5xl leading-tight font-medium text-white"><span class="text-yellow-400">Grow your wealth</span> with GOLDMA</h2>
@@ -185,7 +185,7 @@
      </section>
      <!--  ====================== Grow  Area End =============================  -->
       <!--  ====================== Earning  Area Start =============================  -->
-      <section class="earning-area mt-33 ">
+      <section class="earning-area mt-14 lg:mt-33 ">
          <div class="container">
             <div class="section-title text-center mb-14">
                <h2 class="text-3xl md:text-4xl lg:text-5xl leading-tight font-medium text-white"> How to<span class="text-yellow-400"> start earning </span>  </h2>
@@ -258,7 +258,7 @@
       </section>
        <!--  ====================== Earning  Area End =============================  -->
        <!--  ====================== Goldma  Area Start =============================  -->
-       <section class="goldma-area mt-33">
+       <section class="goldma-area mt-14 lg:mt-33">
 <div class="container">
    <div class="section-title  text-center mb-14">
       <h2 class="text-3xl md:text-4xl lg:text-5xl leading-tight font-medium text-white"> How to buy and stake <span class="text-yellow-400"> GOLDMA</span>  </h2>
@@ -324,7 +324,7 @@
        
         <!--  ====================== Goldma  Area End =============================  -->
         <!--  ====================== Metamask  Area Start =============================  -->
-        <section class="metamask-area mt-33">
+        <section class="metamask-area mt-14 lg:mt-33">
            <div class="container">
             <div class="section-title  mb-14">
                <h2 id="metamask" class="text-3xl md:text-4xl lg:text-5xl leading-tight font-medium text-white"> The Traditional Way  <span class="text-yellow-400"> (Metamask)</span>  </h2>
